<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".formLogin"
        tools:ignore="ExtraText"
        tools:visibility="gone">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/talentexchange"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="212dp"
            android:autofillHints=""
            android:hint="@string/numero_de_telefone_ou_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#3F51B5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,TextFields,VisualLintTextFieldSize,TextContrastCheck"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginBottom="424dp"
            android:autofillHints=""
            android:hint="@string/senha"
            android:inputType="numberPassword"
            android:textColorHint="#3F51B5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,TextFields,VisualLintTextFieldSize,TextContrastCheck"
            tools:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_conectar"
            style="@style/Edit_conectar"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginBottom="336dp"
            android:text="@string/CONECTESE"
            android:textColor="@color/roxo"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,VisualLintButtonSize"
            tools:visibility="gone" />


        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/text_cadastro"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/text_tela_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="292dp"
            android:text="Esqueceu sua senha?"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>




